@@ -7,6 +7,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
 
  new features
  * add unit tests for db access functions
+ * add account guard configuration to config admin panel
 
 
 acct_mgr-0.4 (01-Dec-2012) - branch 0.11
